@startuml
!theme plain
skinparam classAttributeIconSize 0
skinparam linetype ortho

title Diagramme de Classes - Système de Gestion de Formation

' Classe abstraite Utilisateur
abstract class Utilisateur {
    - id : Long
    - username : String {unique}
    - password : String
    - email : String {unique}
    - nom : String
    - prenom : String
    - roles : Set<Role>
    - active : boolean
    --
    + getId() : Long
    + getUsername() : String
    + getEmail() : String
}

' Héritage
class Etudiant extends Utilisateur {
    - matricule : String {unique}
    - dateInscription : LocalDate
    --
    + getMatricule() : String
    + getGroupe() : Groupe
    + getInscriptions() : List<Inscription>
    + getNotes() : List<Note>
}

class Formateur extends Utilisateur {
    - specialite : String
    --
    + getSpecialite() : String
    + getCours() : List<Cours>
    + getNotifications() : List<Notification>
}

' Entités principales
class Cours {
    - id : Long
    - code : String {unique}
    - titre : String
    - description : String
    --
    + getCode() : String
    + getTitre() : String
    + getFormateur() : Formateur
    + getGroupes() : List<Groupe>
    + getInscriptions() : List<Inscription>
    + getNotes() : List<Note>
    + getSeances() : List<Seance>
}

class Groupe {
    - id : Long
    - nom : String {unique}
    - description : String
    --
    + getNom() : String
    + getEtudiants() : List<Etudiant>
    + getCours() : List<Cours>
}

class Inscription {
    - id : Long
    - dateInscription : LocalDateTime
    - statut : StatutInscription
    --
    + getDateInscription() : LocalDateTime
    + getStatut() : StatutInscription
    + getEtudiant() : Etudiant
    + getCours() : Cours
}

class Note {
    - id : Long
    - valeur : Double
    - commentaire : String
    --
    + getValeur() : Double
    + getCommentaire() : String
    + getEtudiant() : Etudiant
    + getCours() : Cours
}

class Seance {
    - id : Long
    - dateHeureDebut : LocalDateTime
    - dateHeureFin : LocalDateTime
    - salle : String
    - type : String
    --
    + getDateHeureDebut() : LocalDateTime
    + getDateHeureFin() : LocalDateTime
    + getSalle() : String
    + getType() : String
}

class Notification {
    - id : Long
    - type : TypeNotification
    - message : String
    - dateCreation : LocalDateTime
    - estLue : boolean
    --
    + getType() : TypeNotification
    + getMessage() : String
    + isEstLue() : boolean
}

class Specialite {
    - id : Long
    - nom : String
    - description : String
}

class Session {
    - id : Long
    - nom : String
    - dateDebut : LocalDate
    - dateFin : LocalDate
    - type : String
}

' Relations
Etudiant "1" --> "0..1" Groupe : appartient à
Etudiant "1" --> "*" Inscription : s'inscrit
Etudiant "1" --> "*" Note : a

Formateur "1" --> "*" Cours : enseigne
Formateur "1" --> "*" Notification : reçoit

Cours "1" --> "1" Formateur : a pour formateur
Cours "*" --> "*" Groupe : suivi par
Cours "1" --> "*" Inscription : a
Cours "1" --> "*" Note : a
Cours "1" --> "*" Seance : contient
Cours "0..1" --> "1" Specialite : appartient à
Cours "0..1" --> "1" Session : appartient à

Inscription "1" --> "1" Etudiant : concerne
Inscription "1" --> "1" Cours : concerne

Note "1" --> "1" Etudiant : concerne
Note "1" --> "1" Cours : concerne

Seance "1" --> "1" Cours : appartient à

Notification "1" --> "1" Formateur : destinée à

@enduml

